--- a/Volunteer Engagement in Sustainable Merton - Data Analysis.ipynb
+++ b/Volunteer Engagement in Sustainable Merton - Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aff8b547",
+   "id": "d0a645e6",
    "metadata": {},
    "source": [
     "# Cronbach's alpha"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "392f1e50",
+   "id": "5c496ded",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e34206d7",
+   "id": "a5579b6c",
    "metadata": {},
    "source": [
     "# ANOVA"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbaad8fa",
+   "id": "4c599208",
    "metadata": {},
    "source": [
     "## 1. Age"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fccb7749",
+   "id": "df4c27fc",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f9889d22",
+   "id": "563fcbab",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "559d419f",
+   "id": "6be11bb4",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0f6f1542",
+   "id": "f459e83b",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "61c2cba2",
+   "id": "b98a428a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8d353037",
+   "id": "5b2f65d5",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "059df4c2",
+   "id": "0c2ba82d",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3a10ba40",
+   "id": "f3ca6f78",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8dabc123",
+   "id": "77e1eabc",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a4a52169",
+   "id": "359cd32a",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dd7f1565",
+   "id": "5a3c0c08",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ffaf164c",
+   "id": "f25a7fdd",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8f43cb",
+   "id": "c348e018",
    "metadata": {},
    "source": [
     "## 2. Gender Identity"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0f0bf777",
+   "id": "c361bb7e",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5c557b9f",
+   "id": "2f24d6ee",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fa846dae",
+   "id": "f6d1e81d",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "aa0a5ab5",
+   "id": "7de61462",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "edf07a9a",
+   "id": "9aae6f60",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "604dd9c7",
+   "id": "71e3dd39",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7f2b364a",
+   "id": "a6cf8f0f",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9a0813f0",
+   "id": "e0d6e661",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ea5c623e",
+   "id": "07abcda3",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "33acee38",
+   "id": "5258c068",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "edbdbb7e",
+   "id": "36c7745b",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0a31fbd6",
+   "id": "d20d968d",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4b6884c",
+   "id": "852ea6f0",
    "metadata": {},
    "source": [
     "## 3. Ethnic Background"
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a22e74ca",
+   "id": "d7c6ebf8",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "48b10583",
+   "id": "97ae1113",
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fc8d2e1a",
+   "id": "f4298012",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2a4ff49b",
+   "id": "53e0f8d5",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9550eefc",
+   "id": "4e97a90f",
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1c05d5a1",
+   "id": "5be83dd3",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "61c86853",
+   "id": "9a3e7ce6",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7d26503d",
+   "id": "334e0150",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ae3e1742",
+   "id": "d71cc333",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5b0721c2",
+   "id": "61a2756c",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "305dbda6",
+   "id": "2f53eac8",
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8d3a619b",
+   "id": "eeb36062",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b9b9d3",
+   "id": "456f29ea",
    "metadata": {},
    "source": [
     "## 4. Disability Status"
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8a788d30",
+   "id": "3c7657a5",
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b664438b",
+   "id": "9ffacc1a",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "00518933",
+   "id": "dbc8275a",
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a1bf39fd",
+   "id": "27d5469f",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ae70b8d8",
+   "id": "225badab",
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "fdfddb91",
+   "id": "22e974b5",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "c1a3bb77",
+   "id": "3b5be649",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "8c119ec6",
+   "id": "befb0be6",
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3069d25e",
+   "id": "85de457b",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "02c4331e",
+   "id": "f57f694c",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2349d751",
+   "id": "12060583",
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "00788e0b",
+   "id": "2f48ec50",
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59798c6",
+   "id": "55e787d6",
    "metadata": {},
    "source": [
     "## 5. Education Level"
@@ -2212,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "cc7ec4b1",
+   "id": "d479e2e4",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0668ceb5",
+   "id": "00c5cc2d",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "99dd1357",
+   "id": "805ecb16",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ab5e1f39",
+   "id": "5faadd72",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ee3c9fe8",
+   "id": "24150e7b",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5969321f",
+   "id": "7fa2dffc",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6d3fd331",
+   "id": "ff60e026",
    "metadata": {},
    "outputs": [
     {
@@ -2510,7 +2510,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d99ea8b1",
+   "id": "899ba6f8",
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2552,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a102a1a2",
+   "id": "bccffa16",
    "metadata": {},
    "outputs": [
     {
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "41b3cd33",
+   "id": "8b8ad9a7",
    "metadata": {},
    "outputs": [
     {
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "1ff6e1a0",
+   "id": "ab21d0e3",
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "2e336a20",
+   "id": "24374525",
    "metadata": {},
    "outputs": [
     {
@@ -2719,7 +2719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3911c4",
+   "id": "830c308b",
    "metadata": {},
    "source": [
     "## 6. Employment Status"
@@ -2728,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a63c915d",
+   "id": "f639b4ea",
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "1b1a856e",
+   "id": "35269ff6",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "8fc8d639",
+   "id": "30d57e13",
    "metadata": {},
    "outputs": [
     {
@@ -2858,7 +2858,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6ea8aa5b",
+   "id": "abb81ee1",
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "812612d9",
+   "id": "081bdee1",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "30628380",
+   "id": "d010acad",
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f88e5457",
+   "id": "050af5d4",
    "metadata": {},
    "outputs": [
     {
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "225bcdf6",
+   "id": "2f6a4a02",
    "metadata": {},
    "outputs": [
     {
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "1e2e9668",
+   "id": "bbfbe5b6",
    "metadata": {},
    "outputs": [
     {
@@ -3110,7 +3110,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "464a0277",
+   "id": "9cabb56b",
    "metadata": {},
    "outputs": [
     {
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85cd1861",
+   "id": "f4baff63",
    "metadata": {},
    "source": [
     "# Chi Square Test to Analyze Relationship between Project Involvement and Motivation"
@@ -3160,7 +3160,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "03604802",
+   "id": "4cf2d254",
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3299,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "019687e6",
+   "id": "6e9d4ba8",
    "metadata": {},
    "outputs": [
     {
@@ -3327,9 +3327,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5792ca8",
+   "metadata": {},
+   "source": [
+    "# Chi Square Test to Analyze Relationship between Hours and Engagement&Satisfaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "cebcfacd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-Square Test for Hours vs Engagement - Vigor\n",
+      "Chi-Square Statistic: 6.733141877601906, P-Value: 0.565679255670171\n",
+      "Degrees of Freedom: 8\n",
+      "Expected Frequencies:\n",
+      "[[ 0.36  4.5   4.14]\n",
+      " [ 1.24 15.5  14.26]\n",
+      " [ 0.28  3.5   3.22]\n",
+      " [ 0.08  1.    0.92]\n",
+      " [ 0.04  0.5   0.46]]\n",
+      "-----\n",
+      "\n",
+      "No significant relationship between Hours and Engagement - Vigor.\n",
+      "\n",
+      "Chi-Square Test for Hours vs Engagement - Dedication\n",
+      "Chi-Square Statistic: 13.430127220449803, P-Value: 0.09788236620084259\n",
+      "Degrees of Freedom: 8\n",
+      "Expected Frequencies:\n",
+      "[[ 0.9   2.34  5.76]\n",
+      " [ 3.1   8.06 19.84]\n",
+      " [ 0.7   1.82  4.48]\n",
+      " [ 0.2   0.52  1.28]\n",
+      " [ 0.1   0.26  0.64]]\n",
+      "-----\n",
+      "\n",
+      "No significant relationship between Hours and Engagement - Dedication.\n",
+      "\n",
+      "Chi-Square Test for Hours vs Engagement - Absorption\n",
+      "Chi-Square Statistic: 10.063771354093936, P-Value: 0.26057851101084806\n",
+      "Degrees of Freedom: 8\n",
+      "Expected Frequencies:\n",
+      "[[ 1.08  3.96  3.96]\n",
+      " [ 3.72 13.64 13.64]\n",
+      " [ 0.84  3.08  3.08]\n",
+      " [ 0.24  0.88  0.88]\n",
+      " [ 0.12  0.44  0.44]]\n",
+      "-----\n",
+      "\n",
+      "No significant relationship between Hours and Engagement - Absorption.\n",
+      "\n",
+      "Chi-Square Test for Hours vs Satisfaction - Task\n",
+      "Chi-Square Statistic: 2.9326776138479063, P-Value: 0.9385110217940594\n",
+      "Degrees of Freedom: 8\n",
+      "Expected Frequencies:\n",
+      "[[1.800e-01 1.080e+00 7.740e+00]\n",
+      " [6.200e-01 3.720e+00 2.666e+01]\n",
+      " [1.400e-01 8.400e-01 6.020e+00]\n",
+      " [4.000e-02 2.400e-01 1.720e+00]\n",
+      " [2.000e-02 1.200e-01 8.600e-01]]\n",
+      "-----\n",
+      "\n",
+      "No significant relationship between Hours and Satisfaction - Task.\n",
+      "\n",
+      "Chi-Square Test for Hours vs Satisfaction - Organisation\n",
+      "Chi-Square Statistic: 8.313848215318036, P-Value: 0.4034283930227826\n",
+      "Degrees of Freedom: 8\n",
+      "Expected Frequencies:\n",
+      "[[ 0.54  2.88  5.58]\n",
+      " [ 1.86  9.92 19.22]\n",
+      " [ 0.42  2.24  4.34]\n",
+      " [ 0.12  0.64  1.24]\n",
+      " [ 0.06  0.32  0.62]]\n",
+      "-----\n",
+      "\n",
+      "No significant relationship between Hours and Satisfaction - Organisation.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the dataset (adjust file path and sheet name as needed)\n",
+    "file_path = \"Volunteer Engagement in Sustainable Merton - Project Involvement vs Motivation.xlsx\"  # Replace with your actual file path\n",
+    "sheet_name = \"Hours\"         # Replace with the correct sheet name\n",
+    "data = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "\n",
+    "# Variables for analysis\n",
+    "independent_var = \"Hours\"\n",
+    "dependent_vars = [\"Engagement - Vigor\", \"Engagement - Dedication\", \"Engagement - Absorption\", \n",
+    "                  \"Satisfaction - Task\", \"Satisfaction - Organisation\"]\n",
+    "\n",
+    "# Step 1: Categorize engagement and satisfaction scores into bins (Low, Medium, High)\n",
+    "for dep_var in dependent_vars:\n",
+    "    data[f'{dep_var}_Binned'] = pd.cut(data[dep_var], bins=3, labels=[\"Low\", \"Medium\", \"High\"])\n",
+    "\n",
+    "# Step 2: Perform chi-square test for each dependent variable against Hours\n",
+    "for dep_var in dependent_vars:\n",
+    "    contingency_table = pd.crosstab(data[independent_var], data[f'{dep_var}_Binned'])\n",
+    "    chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "    \n",
+    "    # Print results\n",
+    "    print(f\"Chi-Square Test for {independent_var} vs {dep_var}\")\n",
+    "    print(f\"Chi-Square Statistic: {chi2}, P-Value: {p}\")\n",
+    "    print(f\"Degrees of Freedom: {dof}\")\n",
+    "    print(\"Expected Frequencies:\")\n",
+    "    print(expected)\n",
+    "    print(\"-----\\n\")\n",
+    "\n",
+    "    # Interpretation\n",
+    "    if p < 0.05:\n",
+    "        print(f\"There is a significant relationship between {independent_var} and {dep_var}.\\n\")\n",
+    "    else:\n",
+    "        print(f\"No significant relationship between {independent_var} and {dep_var}.\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "304356e6",
+   "id": "00d6c57a",
    "metadata": {},
    "outputs": [],
    "source": []
