Analyse sustainability correlations

--- a/Volunteer Engagement in Sustainable Merton - Data Analysis.ipynb
+++ b/Volunteer Engagement in Sustainable Merton - Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0a645e6",
+   "id": "78619113",
    "metadata": {},
    "source": [
     "# Cronbach's alpha"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5c496ded",
+   "id": "2d172e2e",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5579b6c",
+   "id": "7b8ef2a8",
    "metadata": {},
    "source": [
     "# ANOVA"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c599208",
+   "id": "a64a5447",
    "metadata": {},
    "source": [
     "## 1. Age"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "df4c27fc",
+   "id": "584749eb",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "563fcbab",
+   "id": "660034fd",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6be11bb4",
+   "id": "e49cb975",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f459e83b",
+   "id": "3625728e",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b98a428a",
+   "id": "cf6e5f13",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5b2f65d5",
+   "id": "70cb4168",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0c2ba82d",
+   "id": "ff821177",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f3ca6f78",
+   "id": "1564af52",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "77e1eabc",
+   "id": "bbcdb16e",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "359cd32a",
+   "id": "b0fdb373",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5a3c0c08",
+   "id": "aa31c204",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f25a7fdd",
+   "id": "79569bce",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c348e018",
+   "id": "1b53806c",
    "metadata": {},
    "source": [
     "## 2. Gender Identity"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c361bb7e",
+   "id": "a1dde10e",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2f24d6ee",
+   "id": "b2e8e24a",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f6d1e81d",
+   "id": "b5cfe808",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7de61462",
+   "id": "86ac93b9",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9aae6f60",
+   "id": "4071df15",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "71e3dd39",
+   "id": "af7ff355",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a6cf8f0f",
+   "id": "7ab58227",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e0d6e661",
+   "id": "86854891",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "07abcda3",
+   "id": "0cee8360",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5258c068",
+   "id": "e085f95b",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "36c7745b",
+   "id": "f06ee249",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d20d968d",
+   "id": "c22940df",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "852ea6f0",
+   "id": "d322618d",
    "metadata": {},
    "source": [
     "## 3. Ethnic Background"
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d7c6ebf8",
+   "id": "02ea9a40",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "97ae1113",
+   "id": "cdcacbe7",
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f4298012",
+   "id": "788bc176",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "53e0f8d5",
+   "id": "e02221fc",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4e97a90f",
+   "id": "a16261ca",
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5be83dd3",
+   "id": "b2e93bab",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9a3e7ce6",
+   "id": "5355679d",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "334e0150",
+   "id": "036aaf81",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d71cc333",
+   "id": "bddbeae3",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "61a2756c",
+   "id": "40c0ac4f",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2f53eac8",
+   "id": "16821e3c",
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "eeb36062",
+   "id": "e544e7b7",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456f29ea",
+   "id": "17eb35bf",
    "metadata": {},
    "source": [
     "## 4. Disability Status"
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3c7657a5",
+   "id": "d07f982c",
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9ffacc1a",
+   "id": "c1289730",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "dbc8275a",
+   "id": "326523df",
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "27d5469f",
+   "id": "86f9e936",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "225badab",
+   "id": "6588a106",
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "22e974b5",
+   "id": "4cd769cb",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3b5be649",
+   "id": "07aa1d08",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "befb0be6",
+   "id": "b056d7b7",
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "85de457b",
+   "id": "20f62c59",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f57f694c",
+   "id": "528ea60a",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "12060583",
+   "id": "e1523d57",
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2f48ec50",
+   "id": "4791a6d1",
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55e787d6",
+   "id": "e301b27b",
    "metadata": {},
    "source": [
     "## 5. Education Level"
@@ -2212,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d479e2e4",
+   "id": "8417b8da",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "00c5cc2d",
+   "id": "757266d1",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "805ecb16",
+   "id": "2b023e94",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5faadd72",
+   "id": "add5228e",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "24150e7b",
+   "id": "64721f1b",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7fa2dffc",
+   "id": "4b469b51",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "ff60e026",
+   "id": "d86fa6ca",
    "metadata": {},
    "outputs": [
     {
@@ -2510,7 +2510,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "899ba6f8",
+   "id": "a74a5c75",
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2552,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "bccffa16",
+   "id": "f23bcd24",
    "metadata": {},
    "outputs": [
     {
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "8b8ad9a7",
+   "id": "d9513d23",
    "metadata": {},
    "outputs": [
     {
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ab21d0e3",
+   "id": "ffa6890d",
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "24374525",
+   "id": "37bd7d95",
    "metadata": {},
    "outputs": [
     {
@@ -2719,7 +2719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830c308b",
+   "id": "5628bbab",
    "metadata": {},
    "source": [
     "## 6. Employment Status"
@@ -2728,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f639b4ea",
+   "id": "b4e39909",
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "35269ff6",
+   "id": "3fb76121",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "30d57e13",
+   "id": "e3bcac37",
    "metadata": {},
    "outputs": [
     {
@@ -2858,7 +2858,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "abb81ee1",
+   "id": "c0865b81",
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "081bdee1",
+   "id": "f8b29f7e",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d010acad",
+   "id": "ec7c2b70",
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "050af5d4",
+   "id": "ff11eec8",
    "metadata": {},
    "outputs": [
     {
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2f6a4a02",
+   "id": "402f1da5",
    "metadata": {},
    "outputs": [
     {
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "bbfbe5b6",
+   "id": "9dceb603",
    "metadata": {},
    "outputs": [
     {
@@ -3110,7 +3110,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "9cabb56b",
+   "id": "ce6adc19",
    "metadata": {},
    "outputs": [
     {
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4baff63",
+   "id": "3b54c540",
    "metadata": {},
    "source": [
     "# Chi Square Test to Analyze Relationship between Project Involvement and Motivation"
@@ -3160,7 +3160,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "4cf2d254",
+   "id": "62aef591",
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3299,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "6e9d4ba8",
+   "id": "7a12d9b0",
    "metadata": {},
    "outputs": [
     {
@@ -3328,7 +3328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5792ca8",
+   "id": "e0eb4871",
    "metadata": {},
    "source": [
     "# Chi Square Test to Analyze Relationship between Hours and Engagement&Satisfaction"
@@ -3337,7 +3337,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "cebcfacd",
+   "id": "3142875c",
    "metadata": {},
    "outputs": [
     {
@@ -3448,9 +3448,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9f0f7d7",
+   "metadata": {},
+   "source": [
+    "# Sustainability Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "59fcf94d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation Results:\n",
+      "                       Variable  Correlation   P-Value  Significant\n",
+      "0          Motivations - Career     0.445791  0.001177         True\n",
+      "1          Motivations - Social     0.495212  0.000256         True\n",
+      "2          Motivations - Values     0.497574  0.000237         True\n",
+      "3        Motivations - Understd     0.582872  0.000009         True\n",
+      "4         Motivations - Enhance     0.375665  0.007179         True\n",
+      "5         Motivations - Protect     0.388313  0.005326         True\n",
+      "6            Engagement - Vigor     0.601434  0.000004         True\n",
+      "7       Engagement - Dedication     0.478302  0.000443         True\n",
+      "8       Engagement - Absorption     0.590445  0.000006         True\n",
+      "9           Satisfaction - Task     0.194682  0.175482        False\n",
+      "10  Satisfaction - Organisation     0.245789  0.085335        False\n",
+      "11                   Commitment     0.386137  0.005612         True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "\n",
+    "# Load your dataset\n",
+    "file_path = \"Sustainability.xlsx\"  # Replace with your actual file path\n",
+    "sheet_name = \"Sustainability\"  # Replace with the sheet name where the data is\n",
+    "data = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "\n",
+    "# Define the variables\n",
+    "sustainability = \"Sustainability\"  # Replace with the actual column name\n",
+    "other_columns = [\n",
+    "    \"Motivations - Career\", \"Motivations - Social\", \"Motivations - Values\",\n",
+    "    \"Motivations - Understd\", \"Motivations - Enhance\", \"Motivations - Protect\",\n",
+    "    \"Engagement - Vigor\", \"Engagement - Dedication\", \"Engagement - Absorption\",\n",
+    "    \"Satisfaction - Task\", \"Satisfaction - Organisation\", \"Commitment\"\n",
+    "]\n",
+    "\n",
+    "# Calculate correlations\n",
+    "correlation_results = []\n",
+    "for column in other_columns:\n",
+    "    corr, p_value = pearsonr(data[sustainability], data[column])\n",
+    "    correlation_results.append({\"Variable\": column, \"Correlation\": corr, \"P-Value\": p_value})\n",
+    "\n",
+    "# Convert results to DataFrame\n",
+    "correlation_df = pd.DataFrame(correlation_results)\n",
+    "\n",
+    "# Add significance flag\n",
+    "correlation_df[\"Significant\"] = correlation_df[\"P-Value\"] < 0.05\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"Correlation Results:\")\n",
+    "print(correlation_df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00d6c57a",
+   "id": "4ef98884",
    "metadata": {},
    "outputs": [],
    "source": []
